--- a/bh-hr-sr.html
+++ b/bh-hr-sr.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bs">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Denios-OS ">
     <meta name="author" content="denios-linux">
-    <title>D3NIOS OS GNU/LINUX | The first Bosnian open source operating system</title>
+    <title>D3NIOS OS GNU/LINUX | Prvi Bosansko-Hercegovacki operativni sustav otvorenog koda</title>
     <link rel="favicon" href="assets/images/favicon.png">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -32,12 +32,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="release.html">Release</a></li>
-                    <li><a href="contribute.html">Contribute</a></li>
-                    <li><a href="software.html">Software</a></li>
-                    <li><a href="manual.html">Documentation</a></li>
-                    <li><a href="bh-hr-sr.html">BiH/Hr/Sr</a></li>
+                    <li class="active"><a href="#">Početna</a></li>
+                    <li><a href="release.html">Verzije</a></li>
+                    <li><a href="contribute.html">Doprinesite</a></li>
+                    <li><a href="software.html">Softver</a></li>
+                    <li><a href="manual.html">Dokumentacija</a></li>
+                    <li><a href="index.html">Engleski</a></li>
 
                 </ul>
             </div>
@@ -53,22 +53,22 @@
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
                         <h2>D3NIOS GNU/LINUX</h2>
-                        <p>The first open source Bosnian operating system  based on<a href="https://kernel.org"><b> Linux kernel</b></a>  and the <a href="https://gnu.org"><b> GNU project.</b></a></p>
+                        <p>Prvi bosanski operativni sistem otvorenog koda baziran na <a href="https://kernel.org"><b> Linux kernel</b></a> i <a href="https://gnu.org"><b> GNU projektu.</b></a></p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>Privacy...</h2>
-                        <p>Free,open source,solid and secure operating system,with a focus on protecting the user's privacy...</p>
+                        <h2>Privatnost...</h2>
+                        <p>Besplatan,čvrst i siguran operativni sustav otvorenog koda s fokusom na zaštitu privatnosti korisnika..</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>Multiple versions</h2>
-                        <p>You can use Denios Gnu/Linux as a daily home OS, software development,security and penetration testing...</p>
+                        <h2>Više verzija</h2>
+                        <p>Denios Gnu/Linux možete koristiti kao svakodnevni kućni OS,razvoj softvera,sigurnost,testiranje prodora..</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>Easy to use</h2>
-                        <p>Download the iso image of the release you want,burn to usb/cd/dvd ,and start the system...</p>
+                        <h2>Jednostavan za korištenje</h2>
+                        <p>Preuzmite iso sliku izdanja koje želite, snimite na usb/cd/dvd i pokrenite sustav..</p>
                         <div class="da-img"></div>
                     </div>
                     <nav class="da-arrows">
@@ -85,7 +85,7 @@
         <div class="row">
 		<div class="col-md-12">
             <header class="page-header">
-                <h1 class="page-title">Downloads: </h1>
+                <h1 class="page-title">Preuzimanja: </h1>
             </header>
 			</div>
         </div>
@@ -97,7 +97,7 @@
                             <img class="img-responsive" src="assets/images/Untitled-0.png" alt="logo">
                         </div>
                         <div class="h-body text-center">
-                            <h4>Download Denios-Home</h4>
+                            <h4>Preuzmite Denios-Home</h4>
                             <a class="button" href="https://sourceforge.net/projects/denios-linux/files/iso/"> Denios-Home-Live_iso_amd64</a>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <img class="img-responsive" src="assets/images/Untitled-1.png" alt="logo">
                         </div>
                         <div class="h-body text-center">
-                            <h4>Download Denios-Edu</h4>
+                            <h4>Preuzmite Denios-Edu</h4>
                             <a class="button" href="https://sourceforge.net/projects/denios-linux/files/iso/"> Denios-Edu-Live_iso_amd64</a>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             <img class="img-responsive" src="assets/images/Untitled-3.png" alt="logo">
                         </div>
                         <div class="h-body text-center">
-                            <h4>Download Denios-Security</h4>
+                            <h4>Preuzmite Denios-Security</h4>
                             <a class="button" href="https://sourceforge.net/projects/denios-linux/files/iso/"> Denios-Edu-Live_iso_amd64</a>
                         </div>
                     </div>
@@ -133,14 +133,14 @@
                             <img class="img-responsive" src="assets/images/Untitled-2.png" alt="logo">
                         </div>
                         <div class="h-body text-center">
-                            <h4>Installation guide</h4>
-                            <a class="button" href="manual.html">Step by step installation guide.</a>
+                            <h4>Vodič za instalaciju</h4>
+                            <a class="button" href="manual.html">Vodič za instalaciju korak po korak.</a>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- /row  -->
-       
+
         </div>
     </div>
     <!-- container -->
@@ -148,16 +148,15 @@
         <div class="row">
 		<div class="col-md-12">
             <header class="page-header">
-                <h1 class="page-title">Step-by-step user guides</h1>
+                <h1 class="page-title">Korisnički vodiči korak po korak</h1>
             </header>
 			</div>
         </div>
         <div class="row">
 		<div class="col-md-12"> 
             <section id="portfolio" class="page-section section appear clearfix">
-                <p><b>User guides will be updated and new features will be added.</b></p>
-                <p><b>Tutorials for some tools and programs will be added soon.</b></p>
-                
+                <p><b>Korisnički vodiči bit će ažurirani i dodane nove značajke.</b></p>
+                <p><b>Uskoro će biti dodani vodiči za neke alate i programe.</b></p>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row">
@@ -294,12 +293,11 @@
 
     </div>
     <!-- /container -->
- 	
     <!-- container -->
     <div class="container">
         <div class="heading">
             <!-- Heading -->
-            <div class="h-body text-center"><h2>About Denios Gnu/Linux</h2></div>
+            <div class="h-body text-center"><h2>O Denios Gnu/Linux</h2></div>
             <br />
         </div>
         <div class="row">
@@ -307,14 +305,14 @@
                 <img src="assets/images/1.jpg" alt="" class="img-responsive img-thumbnail">
             </div>
             <div class="col-md-8">
-                <p>The first open source Bosnian operating system  based on<a href="https://kernel.org"><b> Linux kernel</b></a>  and the <a href="https://gnu.org"><b> GNU project.</b></a></p>
-                <p>Denios Gnu/Linux offers you the experience of using the OS in a more secure and private way. The system is built entirely from its own, independently developed source forked from the Debian test/unstable branch, with carefully selected features and optimizations to improve system and user stability and security, while offering full customization and a growing collection of packages not found in official debian repositories.</p>
-                <p>All included software is free and open source, compatible with DFSG and GNU guidelines</p>
-                <p>Some features:</p>
-                <p>The OS in all versions comes with several powerful tools for protecting user privacy, encryption, tools for network anonymization...</p>
-                <p>The Home version is for everyday use, and in addition to the tools and applications needed for normal use, it only has privacy tools.</p>
-                <p>The EDU version is the version intended for development and education. I am currently still working on this version.</p>
-                <p>The Security version is for ethical hacking, penetration testing, as well as development and research. It comes with about 600 pre-installed powerful tools for various purposes.</p>
+                <p>Prvi bosanski operativni sistem otvorenog koda baziran na<a href="https://kernel.org"><b> Linux kernelu</b></a>  and the <a href="https://gnu.org"><b> GNU projektu.</b></a></p>
+                <p>Denios Gnu/Linux nudi vam iskustvo korištenja OS-a na sigurniji i privatniji način. Sustav je u potpunosti izgrađen iz vlastitog, neovisno razvijenog izvora račvanog iz Debianove test/nestabilne grane, s pažljivo odabranim značajkama i optimizacijama za poboljšanje stabilnosti i sigurnosti sustava i korisnika, dok istovremeno nudi potpunu prilagodbu i rastuću zbirku paketa koji se ne nalaze u službenim Debian spremištima</p>
+                <p>Sav uključeni softver je besplatan i otvorenog koda, kompatibilan s DFSG i GNU smjernicama.</p>
+                <p>Neke značajke:</p>
+                <p>OS u svim verzijama dolazi s nekoliko moćnih alata za zaštitu privatnosti korisnika, enkripciju, alate za anonimizaciju mreže.</p>
+                <p>Home verzija je za svakodnevnu upotrebu, a osim alata i aplikacija potrebnih za normalno korištenje, ima samo alate za privatnost.</p>
+                <p>EDU verzija je verzija namijenjena razvoju i obrazovanju. Trenutno još uvijek u razvoju.</p>
+                <p>Sigurnosna verzija namijenjena je etičkom hakiranju, testiranju prodora, kao i razvoju i istraživanju. Dolazi s oko 600 unaprijed instaliranih snažnih alata za razne namjene.</p>
             </div>
         </div>
     </div>
@@ -323,9 +321,9 @@
         <div class="footer1">
             <div class="container">
                 <div class="row">
-                        <h3 class="panel-title text-center">DISCLAIMER !!!</h3>
+                        <h3 class="panel-title text-center">ODRICANJE OD ODGOVORNOSTI !!!</h3>
                         <div class="panel-body">
-                            <p>All information and software available on Denios Gnu/Linux are for ethical hacking and educational purposes only. Use these at your own discretion, developers cannot be held responsible for any damages caused. Usage of all tools on this OS for attacking targets without prior mutual consent is illegal. It is the end user’s responsibility to obey all applicable local, state and federal laws. We assume no liability and are not responsible for any misuse or damage caused by this OS. </p>
+                            <p>Sve informacije i softver dostupni na Denios Gnu/Linuxu služe samo za etičko hakiranje i obrazovne svrhe. Koristite ih prema vlastitom nahođenju, programeri se ne mogu smatrati odgovornim za bilo kakvu prouzročenu štetu. Korištenje svih alata na ovom OS-u za napad na ciljeve bez prethodnog obostranog pristanka je protuzakonito. Krajnji je korisnik dužan poštivati ​​sve važeće lokalne, državne i savezne zakone. Ne preuzimamo nikakvu odgovornost i nismo odgovorni za bilo kakvu zlouporabu ili štetu uzrokovanu ovim OS-om.</p>
                         </div>
                 <!-- /row of panels -->
             </div>
@@ -338,12 +336,12 @@
                     <div class="col-md-6 panel">
                         <div class="panel-body">
                             <p class="simplenav">
-                                <a href="index.html">Home</a> | 
-								<a href="release.html">Releases</a> |
-								<a href="contribute.html">Contribute</a> |
-								<a href="softwer.html">Software</a> |
-								<a href="manual.html">Documentation</a> |
-								<a href="bh-hr-sr.html">BiH/Hr/Sr</a>
+                                <a href="bh-hr-sr.html">Početna</a> | 
+								<a href="release.html">Izdanja</a> |
+								<a href="contribute.html">Doprinesite</a> |
+								<a href="softwer.html">Softver</a> |
+								<a href="manual.html">Dokumentacija</a> |
+								<a href="index.html">Engleski</a>
                             </p>
                         </div>
                     </div>
