--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
 		<div class="col-md-12">
             <header class="page-header">
                 <h1 class="page-title">Downloads: </h1>
+                <div class="row">
             </header>
 			</div>
+            <h3 class="text-center">Note: </h3>
+            <h3 class="text-center">Current iso images are for testing. If you notice any bugs, please send feedback so that they can be fixed as soon as possible.</h3>
+	    <h3 class="text-center">Default password for live session is : <b> toor </b></h3>	
         </div>
             <div class="row">
                 <div class="col-md-3 col-sm-6 highlight">
@@ -138,6 +142,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-12">
+                <header class="page-header">
+                    <h4>From ISO test-2703 problems with Policykit-1 and Anonsurf-GTK (GUI) have been solved.</h4>
+                </header>
+                </div>
+           
             </div>
             <!-- /row  -->
        
