--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </header>
 			</div>
             <h3 class="text-center">Note: </h3>
-            <h3 class="text-center">Current iso images are for testing. If you notice any bugs, please send feedback so that they can be fixed as soon as possible.</h3>
+            <h3 class="text-center">Current iso images are for testing.</h3>
 	    <h3 class="text-center">Default password for live session is : <b> toor </b></h3>	
         </div>
             <div class="row">
