--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <img class="card-img-top" src="assets/img/home/security.svg" alt="">
                 <h3 class="card-title-b lead text-info-c color-danger"><span class="nunito-dark">OpenBosniana</span> SECURITY</h3>
                     <p class="nunito-dark p-2 mt-2">Operating system with XFCE Desktop for penetration testers and security researchers.</p>
-                    <a href="editions/security.html"> class="btn btn-raised"> Read More</a>
+                    <a href="editions/security.html" class="btn btn-raised"> Read More</a>
                 </div>
             </div>
           </div>
