--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
     <div class="container">
         <div class="nav-vendor-wrap">
-            <a class="navbar-brand nav-vendor" href="index.html"></a>
+            <a class="navbar-brand nav-vendor" href="/"></a>
         </div>
     </div>
     <button class="btn-sakriveni">
