--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             <img class="card-img-top-c" src="assets/img/home/usb.svg">
                             <h3 class="card-title-c lead text-info-c text-right">Simple and Easy</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">Experience OpenBosniana OS without the need for installation. Just create a bootable USB flash drive and you're ready to go. It’s designed to work out of the box and comes preloaded with all the essential applications for everyday use.</p>
+                                <p class="nunito-dark pt-1">Use OpenBosniana OS without any installation or setup. Simply download one of the versions, create a bootable USB flash drive, and you're ready to go. It is designed to work 'out of the box' and comes fully equipped with the software and applications that most people need. Turn it on and start working.</p>
                             </div>
                         </div>
                     </section>
@@ -194,7 +194,7 @@
                             <img class="card-img-top-c" src="assets/img/home/privacy.svg">
                             <h3 class="card-title-c lead text-info-c text-right">Privacy</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">OpenBosniana OS ensures your data is handled safely and reliably. Free from trackers and telemetry features, it offers robust privacy tools including AnonSurf, Tor, a custom Firefox browser, cryptographic tools, and more.</p>
+                                <p class="nunito-dark pt-1">OpenBosniana OS ensures your data is handled safely and reliably. The default web browser is a modified version of Firefox to make it harder for websites to collect user data. Tracking and telemetry features are disabled by default. With our built-in tools, in addition to preserving online privacy, you can also encrypt your home partition during installation—or other storage devices later on.</p>
                             </div>
                         </div>
                     </section>
@@ -204,17 +204,7 @@
                             <img class="card-img-top-c" src="assets/img/home/security-high.svg">
                             <h3 class="card-title-c lead text-info-c text-right">Safety</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">OpenBosniana OS is built with security in mind. Enjoy native support for full disk encryption, rapid security updates, and a fortified Debian kernel to safeguard your sensitive data.</p>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <div class="card-body-c card-bckgr">
-                            <img class="card-img-top-c" src="assets/img/home/work.svg">
-                            <h3 class="card-title-c lead text-info-c text-right">Start and work</h3>
-                            <div class="p-3 ">
-                                <p class="nunito-dark pt-1">OpenBosniana OS provides all the software you need for your daily work. Use the bottom panel to access the main applications.</p>
+                                <p class="nunito-dark pt-1">All Linux distributions are inherently safe. Every user has his own, protected part of the system in which work is done. OpenBosniana OS has numerous pre-configured tools and features to protect security and privacy. As long as you install software from secure repositories, you don't have to worry about unauthorized actions happening to your system.</p>
                             </div>
                         </div>
                     </section>
@@ -222,9 +212,9 @@
                     <section>
                         <div class="card-body-c card-bckgr">
                             <img class="card-img-top-c" src="assets/img/home/office.svg">
-                            <h3 class="card-title-c lead text-info-c text-right">Home or Office</h3>
+                            <h3 class="card-title-c lead text-info-c text-right">Office</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">Shipping with the latest version of the free LibreOffice suite, so that you can work on your documents, spreadsheets and presentations right away. LibreOffice is Microsoft Office compatible, that means you can open and use all of your existing Microsoft Office files.</p>
+                                <p class="nunito-dark pt-1">With the complete LibreOffice office suite, you can use word processing programs, create presentations, drawings, spreadsheets, or even databases. LibreOffice is compatible with Microsoft Office, meaning you can open and use all your existing Microsoft Office files.</p>
                             </div>
                         </div>
                     </section>
@@ -234,7 +224,17 @@
                             <img class="card-img-top-c" src="assets/img/home/mm.svg">
                             <h3 class="card-title-c lead text-info-c text-right">Multimedia</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">Create stunning 3D art with Blender, edit photos in GIMP, and design vector graphics with Inkscape. Plus, access over 7,000 games with Steam. And there's so much more to explore!</p>
+                                <p class="nunito-dark pt-1">Enjoy music, watch TV and movies, or listen to radio online. We include modern and popular players that handle a wide range of codecs, so you don't have to search for them.</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section>
+                        <div class="card-body-c card-bckgr">
+                            <img class="card-img-top-c" src="assets/img/home/work.svg">
+                            <h3 class="card-title-c lead text-info-c text-right">Design</h3>
+                            <div class="p-3 ">
+                                <p class="nunito-dark pt-1">Whether you're watching or editing your favorite files, OpenBosniana OS provides you with the tools you need to turn them into something special. Work in 3D with Blender, draw or edit images in GIMP, and use Inkscape for vector graphics. </p>
                             </div>
                         </div>
                     </section>
@@ -252,9 +252,9 @@
                     <section>
                         <div class="card-body-c card-bckgr">
                             <img class="card-img-top-c" src="assets/img/home/upd.svg">
-                            <h3 class="card-title-c lead text-info-c text-right">Updates</h3>
+                            <h3 class="card-title-c lead text-info-c text-right">Tools and Updates</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">Install the system once and update when needed. You have the choice between testing and stable updates, depending on whether you need the latest or the more sustainable versions.</p>
+                                <p class="nunito-dark pt-1">With our built-in applications such as OB Welcome and OB Control Center, easily maintain, customize, and improve your system. Install the system once and update as needed.</p>
                             </div>
                         </div>
                     </section>
@@ -264,12 +264,12 @@
                             <img class="card-img-top-c" src="assets/img/apps.svg">
                             <h3 class="card-title-c lead text-info-c text-right">Applications</h3>
                             <div class="p-3 ">
-                                <p class="nunito-dark pt-1">Different versions of the operating system come with different applications and tools. Take a closer look at the applications that come with the desired version:</p>
+                                <p class="nunito-dark pt-1">Different versions of the operating system come with different default applications and tools. Take a closer look at the applications that come with the desired version: </p>
                                 <ul class="nunito-dark pb-1 pt-1">
+                                    <li> <a href="##"> CORE OpenBosniana Packages</a></li>
                                     <li> <a href="##"> HOME Applications</a></li>
                                     <li> <a href="##"> EDU Applications</a></li>
                                     <li> <a href="##"> SECURITY Applications</a></li>
-                                    <li> <a href="##"> CORE OpenBosniana Packages</a></li>
                                 </ul>
                             </div>
                         </div>
