Update css, index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OpenBosniana | Free, Private, Secure Operating System</title>
+    <title>OpenBosniana | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System </title>
     <meta name="description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
     <meta name="author" content="Denis Maslo">
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="OpenBosniana OS">
     <meta property="og:title" content="
 
-            OpenBosniana | Free, Private, Secure Operating System
+            OpenBosniana | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System
 
     ">
     <meta property="og:url" content="https://bosniana.org/">
@@ -299,7 +299,7 @@
                         <img class="card-img-top" src="assets/img/home/home.svg" alt="">
                         <h3 class="card-title-b lead text-info-c"><span class="nunito-dark">OpenBosniana</span> HOME</h3>
                         <p class="nunito-dark p-2 mt-2">Operating system with Plasma desktop and application suite designed for workplace at both office and home.</p>
-                        <a href="editions/home.html" class="btn btn-raised">Read More</a>
+                        <a href="project/home.html" class="btn btn-raised">Read More</a>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                         <img class="card-img-top" src="assets/img/home/education.svg" alt="">
                         <h3 class="card-title-b lead text-info-c color-warning"><span class="nunito-dark">OpenBosniana</span> EDUCATION</h3>
                         <p class="nunito-dark p-2 mt-2">Operating system for all kinds of educational institutions from preschool to high school which provides integration of both students' and teacher's workplaces.</p>
-                        <a href="editions/education.html" class="btn btn-raised">Read More</a>
+                        <a href="project/education.html" class="btn btn-raised">Read More</a>
                     </div>
                 </div>
             </div>
@@ -321,7 +321,7 @@
                         <img class="card-img-top" src="assets/img/home/security.svg" alt="">
                         <h3 class="card-title-b lead text-info-c color-danger"><span class="nunito-dark">OpenBosniana</span> SECURITY</h3>
                         <p class="nunito-dark p-2 mt-2">Operating system with XFCE Desktop for penetration testers and security researchers.</p>
-                        <a href="editions/security.html" class="btn btn-raised">Read More</a>
+                        <a href="project/security.html" class="btn btn-raised">Read More</a>
                     </div>
                 </div>
             </div>
