Fix download menu

--- a/downloads/openbosniana-edu-kde.html
+++ b/downloads/openbosniana-edu-kde.html
@@ -150,8 +150,8 @@
         <br>
       </div>
     </div>
-    <div class="collapse navbar-collapse" id="ms-navbar">
-      <ul class="navbar-nav mr-3">
+    <div class="ms-slidebar " id="ms-slidebar">
+      <ul class="ms-slidebar-menu" id="slidebar-menu">
         <li class="nav-item">
           <a href="../index.html">
             <i class="ri-home-4-fill"></i> Home </a>
@@ -176,17 +176,17 @@
           <a href="../gallery/index.html">
             <i class="ri-image-fill"></i> Gallery </a>
         </li>
-        <li class="nav-item active">
-          <a href="index.html">
+        <li class="nav-item">
+          <a class="active" href="index.html">
             <i class="ri-download-2-fill"></i> Downloads </a>
         </li>
-        <li class="nav-item ">
+        <li class="nav-item">
           <a href="../bs/index.html">
-            <i class="ri-global-line"></i> BS </a>
+            <i class="ri-global-line"></i> Bosanski </a>
         </li>
+        <div class="linija-dole"></div>
       </ul>
     </div>
-    </nav>
     <div class="logo-font">
       <section id="sponsor">
         <div class="sponsor pt-1 bg-sponsor">
