--- a/project/about.html
+++ b/project/about.html
@@ -260,7 +260,7 @@
       </div>
     </nav>
     <div class="bodymargin"></div>
-    <div class="container-fluid">
+    <div class="container-fluid abouttext-normal">
       <div class="row">
         <div class="col-md-3 navbar-color">
           <div class="position-sticky" style="top: 3rem;">
